<resources>
    <string name="app_name">自动任务</string>
    <string name="grant_by_shizuku"><b>Shizuku</b>权限</string>
    <string name="intro_to_shizuku">我们需要Shizuku权限才能启动服务，请放心，Shizuku权限用于且仅用于使应用正常工作。
    \n\n该模式下，所有功能可用，推荐使用该模式。</string>
    <string name="more_to_say">本应用专注于帮助您执行自动任务。\n\n
        我们的优势在于：\n\n
        • 可自定义任务\n
        • 功能丰富\n
        • 省电且占用系统资源较少\n
    </string>
    <string name="more">更多</string>
    <string name="service_is_running">服务正在运行…</string>
    <string name="stop">停止</string>
    <string name="about">关于</string>
    <string name="settings">设置</string>
    <string name="install_shizuku">安装Shizuku</string>
    <string name="grant">授权</string>
    <string name="granted">已授权</string>
    <string name="enter">进入</string>
    <string name="run">启动</string>
    <string name="service_not_started">服务未启动</string>
    <string name="service_connecting">正在启动服务…</string>
    <string name="launch_shizuku_manager">打开Shizuku</string>
    <string name="pls_grant_manually">您已选择「拒绝且不再询问」该应用的权限申请，请手动进行授权。</string>
    <string name="error_occurred">发生错误</string>
    <string name="dump_log">导出日志</string>
    <string name="dump_log_failed">导出日志失败</string>
    <string name="format_duration">共%d天%d时%d分</string>
    <string name="auto_start_after_boot">开机自启</string>
    <string name="caption_auto_start">开启Shizuku</string>
    <string name="tip_enable_shizuku_auto_start">请先启用Shizuku的「开机启动」功能</string>
    <string name="auto_started_for_u">已为您开机自启</string>
    <string name="auto_starting_for_u">正在为您开机自启…</string>
    <string name="ascending">升序</string>
    <string name="app_label">应用名称</string>
    <string name="sort_by">排序方式</string>
    <string name="feedback">反馈</string>
    <string name="feedback_and_communicate">反馈 &amp; 交流</string>
    <string name="check_for_updates">检查更新</string>
    <string name="mail_subject">「自动任务」反馈 %s</string>
    <string name="mail_body">%s\n问题描述:\n</string>
    <string name="cr">本应用以Apache-2.0协议<a href='https://github.com/xjunz/AutoTask'>开放源代码</a>\nCopyright © XJUNZ 2023\n\n了解我们的<a href='xtsk://privacy_policy'>《隐私政策》</a></string>
    <string name="no_log">无日志</string>
    <string name="feedback_group">加群</string>
    <string name="feedback_email">邮件</string>
    <string name="night_mode">夜间模式</string>
    <string name="text">文本</string>
    <string name="app_not_found">找不到打开方式</string>
    <string name="operating_mode">工作模式</string>
    <string name="accessibility_service_summary">允许应用获取屏幕信息以及执行自定义任务,\n该功能用于且仅用于使应用正常工作。</string>
    <string name="shizuku"><b>Shizuku</b></string>
    <string name="a11y_service">辅助功能</string>
    <string name="desc_shizuku_mode">Shizuku模式下，可使用全部功能，推荐使用该模式</string>
    <string name="desc_a11y_mode">辅助功能模式下，部分功能将受限</string>
    <string name="tip">提示</string>
    <string name="prompt_shizuku_time_out">启动超时，请尝试重试。若重试后仍然超时，可尝试重新授权Shizuku权限。</string>
    <string name="pls_start_a11y_service_manually">请在设置中手动启用【自动任务】的辅助功能服务</string>
    <string name="prompt_stop_service">你确定要停止服务吗？</string>
    <string name="preload">预置</string>
    <string name="custom_task">自定义任务</string>
    <string name="caption_custom_task">管理或创建自定义任务</string>
    <string name="task_list">任务列表</string>
    <string name="add_task">添加任务</string>
    <string name="turn_on_floating_assistant">打开悬浮助手</string>
    <string name="dismiss">关闭</string>
    <string name="select">选中</string>
    <string name="reselect">重选</string>
    <string name="inspect_layout">查看布局</string>
    <string name="drag_to_here_to_remove_overlay">拖动到此处关闭悬浮助手</string>
    <string name="pls_enable_overlay_manually">请在设置中允许本应用的悬浮窗权限</string>
    <string name="edit_task">编辑任务</string>
    <string name="delete">删除</string>
    <string name="operation">操作</string>
    <string name="replace_with">替换为</string>
    <string name="add_inside">在内部添加</string>
    <string name="add_after">在后面添加</string>
    <string name="add_before">在前面添加</string>
    <string name="back">返回</string>
    <string name="complete">完成</string>
    <string name="format_clear_applets">清空共%d条规则</string>
    <string name="expand_more">展开</string>
    <string name="unfold_less">收起</string>
    <string name="sort_by_app_name">按应用名称</string>
    <string name="sort_by_suspicion">智能排序</string>
    <string name="sort_by_apk_size">按应用体积</string>
    <string name="sort_by_install_time">按首次安装时间</string>
    <string name="reverse_order">倒序</string>
    <string name="show_system_apps">显示系统应用</string>
    <string name="launcher_activity">启动页</string>
    <string name="format_enable_floating_inspector"><![CDATA[使用<b>悬浮助手</b>帮助您快速选择%s]]></string>
    <string name="enable_floating_inspector">启用悬浮助手</string>
    <string name="enable">启用</string>
    <string name="goto_grant">去授权</string>
    <string name="overlay_permission">悬浮窗权限</string>
    <string name="overlay_permission_optional">悬浮窗权限(可选)</string>
    <string name="grant_failed">授权失败</string>
    <string name="prompt_start_shizuku_service">请先启动Shizuku服务</string>
    <string name="prompt_install_shizuku">请先下载并安装Shizuku</string>
    <string name="pls_wait">请稍等…</string>
    <string name="inspect_failed">未捕获到窗口，请尝试重试</string>
    <string name="launch_failed">启动失败</string>
    <string name="screenshot_fixed">已固定当前页面截图</string>
    <string name="pointer_controller_enabled">已启用指针控制盘</string>
    <string name="format_screenshot_failed">截图失败(%d)</string>
    <string name="pin_screenshot">固定屏幕截图</string>
    <string name="cancel_pin_screenshot">取消固定屏幕截图</string>
    <string name="show_node_bounds">显示布局边界</string>
    <string name="cancel_show_node_bounds">取消显示布局边界</string>
    <string name="container">容器</string>
    <string name="button">按钮</string>
    <string name="list">列表</string>
    <string name="image_button">图标按钮</string>
    <string name="image">图片</string>
    <string name="custom_view">视图</string>
    <string name="navigated_to_selected_node">已定位到所选节点</string>
    <string name="_true">是</string>
    <string name="_false">否</string>
    <string name="format_px">%d像素</string>
    <string name="no_node_selected">未选中任何节点</string>
    <string name="node_info_overlay_subtitle">请勾选想要指定的规则</string>
    <string name="ui_object">控件</string>
    <string name="child_node">子控件</string>
    <string name="child_node_count_in_range">子控件数量在指定范围</string>
    <string name="not_child_node_count_in_range">子控件数量不在指定范围</string>
    <string name="seekbar">拖动条</string>
    <string name="tip_floating_inspector_enabled">悬浮助手已启用</string>
    <string name="options_from_inspector_added">已添加%d条规则</string>
    <string name="prompt_clear_all_options">确定要清空所有规则吗？</string>
    <string name="format_applet_is_removed">已移除%d条规则</string>
    <string name="reset">重置</string>
    <string name="_default">默认</string>
    <string name="error_empty_input">输入不能为空</string>
    <string name="minimum">最小值</string>
    <string name="maximum">最大值</string>
    <string name="no_limit">无限制</string>
    <string name="make_equal">让两者相同</string>
    <string name="unit">单位</string>
    <string name="relative_to">相对于</string>
    <string name="screen">屏幕</string>
    <string name="parent_node">父控件</string>
    <string name="px">像素</string>
    <string name="dip">dp</string>
    <string name="screen_width">屏幕宽度</string>
    <string name="screen_height">屏幕高度</string>
    <string name="help">帮助</string>
    <string name="help_distance_unit"><b>像素</b>: 屏幕上的最小显示单元
    \n<b>dp</b>: 设备无关像素，可在不同屏幕上显示相同的大小，是安卓APP中最常用的显示单位
    \n<b>屏幕高度/宽度: </b>取值范围之间为0~1，代表多少比例的屏幕的宽度/高度
    \n<b>父节点高度/宽度: </b>取值范围之间为0~1，代表多少比例的父节点的宽度/高度
    </string>
    <string name="format_scoped_distance_name">到%s%s边缘的距离</string>
    <string name="format_error_min_greater_than_max">%1$s不能大于%2$s</string>
    <string name="format_error_min_max_not_in_scope">当前选中单位为\"%s\"，取值范围为%d到%d</string>
    <string name="format_less_than">小于等于%s</string>
    <string name="format_larger_than">大于等于%s</string>
    <string name="format_percent_less_than">小于等于%d%%</string>
    <string name="format_percent_larger_than">大于等于%d%%</string>
    <string name="format_percent_range">%1$d%%至%2$d%%</string>
    <string name="parent_width">父节点宽度</string>
    <string name="parent_height">父节点高度</string>
    <string name="format_error_no_limit">未指定%1$s或%2$s</string>
    <string name="screenshot_failed">截图失败，可尝试重试</string>
    <string name="clear_all">清空</string>
    <string name="error_mal_format">格式错误，请重新输入</string>
    <string name="start_time">起始时间</string>
    <string name="end_time">结束时间</string>
    <string name="error_no_selection">未选中任何项目</string>
    <string name="format_day_in_month">%d号</string>
    <string name="format_before">%s之前</string>
    <string name="format_after">%s之后</string>
    <string name="with_pane_title">%s所处页面标题为</string>
    <string name="error_no_comp_detected">暂未检测到任何应用和页面</string>
    <string name="format_switch_mode">悬浮助手已切换到%s模式</string>
    <string name="coords">坐标点</string>
    <string name="format_current">当前%s</string>
    <string name="nothing_selected">未选择任何项目</string>
    <string name="prompt_clear_all">你确定要清空吗？</string>
    <string name="collapse_all_to_drag">折叠全部规则才能进行拖动哦</string>
    <string name="else_if">否则如果</string>
    <string name="_else">否则</string>
    <string name="no_rule_added">未指定任何规则</string>
    <string name="add_rules">添加规则</string>
    <string name="format_error_reach_max_applet_size">添加失败，此处仅允许%d条规则哦！</string>
    <string name="error_over_max_applet_size">超过最大规则数，添加失败！</string>
    <string name="format_reach_required_applet_size">该规则组只允许%d条规则哦~</string>
    <string name="removed">已移除</string>
    <string name="device_status">设备状态</string>
    <string name="prompt_applet_multi_selection_depth">只能选中相同层级的规则哦！</string>
    <string name="merge_rules">合并为规则组</string>
    <string name="split_merged_rules">解散当前规则组</string>
    <string name="format_selection_count">已选中%d项</string>
    <string name="matches_rule_set">满足规则组</string>
    <string name="format_applet_count">共%d条规则</string>
    <string name="error_merge_single_applet">选中多个规则才可以合并哦！</string>
    <string name="quit_multi_selection">退出多选模式</string>
    <string name="too_deeply_nested">合并失败，请勿嵌套过深！</string>
    <string name="prompt_split_container_flow">确定要解散当前规则组吗？这可能导致规则的逻辑发生变化。</string>
    <string name="unable_to_merge">无法合并所选规则</string>
    <string name="ui_object_operations">控件操作</string>
    <string name="format_copy_text">将%s复制到剪切板</string>
    <string name="format_extract_text">从%s中提取文本</string>
    <string name="ui_object_text">控件的文字</string>
    <string name="matched_ui_object">满足条件的控件</string>
    <string name="extracted_text">提取的文本</string>
    <string name="input_field">指定文本框</string>
    <string name="input_content">输入的内容</string>
    <string name="unspecified">未指定</string>
    <string name="refer_to">引用</string>
    <string name="specify_value">指定</string>
    <string name="notification_content">通知内容</string>
    <string name="regex">正则表达式</string>
    <string name="format_select">请选择%s</string>
    <string name="set_referent">设置标识</string>
    <string name="edit">编辑</string>
    <string name="remove">移除</string>
    <string name="add_comment">添加说明</string>
    <string name="disable">禁用</string>
    <string name="open_in_new">在新窗口中打开</string>
    <string name="move">移动</string>
    <string name="tip_edit_task_metadata">* 您稍后仍然可以修改以上信息</string>
    <string name="task_name">任务名称</string>
    <string name="task_desc">任务描述（可缺省）</string>
    <string name="edit_task_metadata">编辑任务信息</string>
    <string name="start_service">启动服务</string>
    <string name="launch">启动</string>
    <string name="tip_overlay_permission_for_task">用于在后台显示通知，未授权会导致相关任务运行失败。</string>
    <string name="executed_successfully">执行成功</string>
    <string name="executed_unsuccessfully">执行失败</string>
    <string name="not_executed_or_skipped">未执行</string>
    <string name="task_snapshots">运行记录</string>
    <string name="emoji_crash" translatable="false">😢</string>
    <string name="oops_app_crashed">很抱歉，应用崩溃了…</string>
    <string name="restart_app">重启应用</string>
</resources>