<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2023 xjunz. All rights reserved.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_snapshots"
            android:textAppearance="@style/TextAppearance.Material3.ActionBar.Title"
            android:textColor="?colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_selectable_surface"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icons"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_check_circle_24px"
                android:drawablePadding="8dp"
                android:text="@string/executed_successfully"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_cancel_24px"
                android:drawablePadding="8dp"
                android:text="@string/executed_unsuccessfully"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_do_not_disturb_24px"
                android:drawablePadding="8dp"
                android:text="@string/not_executed_or_skipped"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_snapshot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_selectable_surface"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:paddingVertical="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="10"
            tools:listitem="@layout/item_task_snapshot" />
    </LinearLayout>
</layout>